BUGFR-1178: Product Tracker Table Horizontal scroll stepping

--- a/src/containers/ProductTracker/ProductTrackerTable/index.scss
+++ b/src/containers/ProductTracker/ProductTrackerTable/index.scss
@@ -416,9 +416,11 @@
 
     .dv-arrow {
       position: absolute;
-      width: 42%;
+      width: max-content;
       display: flex;
       justify-content: center;
+      left: 50%;
+      transform: translateX(-50%);
 
       span {
         float: left;
